--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -26,8 +26,10 @@
 @import "theme/post-styles/where-are-they-now";
 @import "theme/post-styles/image-block";
 @import "theme/post-styles/author";
+@import "theme/post-styles/related-articles";
 @import "theme/archive";
 @import "theme/archive-mag";
 @import "theme/home";
 @import "theme/current-issue-page";
+@import "theme/search-results-page";
 @import "theme/footer";
