--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
@@ -27,6 +27,9 @@
         margin-top: 10px;
         margin-bottom: 25px;
     }
+    .downloadPdf {
+        text-decoration: underline;
+    }
 }
 
 .flex {
