--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
@@ -9,7 +9,7 @@
     margin: 0 12px !important;
 }
 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:hover {
     color: $black;
 }
 
@@ -31,7 +31,7 @@
             background-repeat: no-repeat;
             background-position: 0 19px;
             background-size: 100% 30px;
-            &:hover {
+            &:hover, &:focus {
                 color: $black;
                 background-image: -webkit-linear-gradient($green, $green);
             }
@@ -44,7 +44,7 @@
             background-repeat: no-repeat;
             background-position: 0 19px;
             background-size: 100% 30px;
-            &:hover {
+            &:hover, &:focus {
                 color: $black;
                 background-image: -webkit-linear-gradient($blue, $blue);
             }
@@ -57,7 +57,7 @@
             background-repeat: no-repeat;
             background-position: 0 19px;
             background-size: 100% 30px;
-            &:hover {
+            &:hover, &:focus {
                 color: $black;
                 background-image: -webkit-linear-gradient($orange, $orange);
             }
@@ -70,7 +70,7 @@
             background-repeat: no-repeat;
             background-position: 0 19px;
             background-size: 100% 30px;
-            &:hover {
+            &:hover, &:focus {
                 color: $black;
                 background-image: -webkit-linear-gradient($yellow, $yellow);
             }
