--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
@@ -50,4 +50,9 @@
             background: darken(#e8e8e8, 10%);
         }
     }
+    &.no-border {
+        border-top: none;
+        margin-top: 0;
+        padding-top: 0;
+    }
 }
