--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
@@ -128,3 +128,14 @@
 .hamburgerMenu {
     margin-left: 20px;
 }
+
+
+
+@include media-breakpoint-down(sm) {
+  .hamburgerMenu {
+    display: none;
+  }
+  .desktop-nav {
+    display: none;
+  }
+}
