--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
@@ -56,3 +56,15 @@
         padding-top: 0;
     }
 }
+
+
+@include media-breakpoint-down(md) {
+    .author-img {
+        width: 20%;
+        margin-right: 3%;
+    }
+    .author-info {
+        width: 77%;
+        float: right;
+    }
+}
