--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
@@ -119,6 +119,11 @@ input[type="search"]:-webkit-autofill::first-line {
         line-height: 60px;
         font-family: 'Lynon Reg', sans-serif;
         color: $white;
+        white-space: nowrap;
+        @include media-breakpoint-down(md) {
+            font-size: 26px;
+            line-height: 48px;
+        }
         &:hover, &:focus {
             text-decoration: underline;
         }
