--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -86,7 +86,7 @@
     padding-bottom: 30px;
     margin-bottom: 75px;
     position: relative;
-    left: -100px;
+    left: 0;
     a.see-all {
         @include author-font;
         line-height: 20px;
@@ -122,5 +122,30 @@
     }
     &.orange {
         background-image: linear-gradient(180deg, $orange, $orange);
+    }
+}
+
+
+
+
+@media (min-width: 1400px) {
+    .featured-cat-heading {
+        left: -100px;
+    }
+}
+
+@include media-breakpoint-down(md) {
+    .sticky-home-intro .sticky-low-p {
+        width: 100%;
+    }
+}
+
+
+@include media-breakpoint-down(sm) {
+    .sticky-home-intro{
+        display: none;
+    }
+    .home .left-border {
+        border-left: none;
     }
 }
