--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -60,6 +60,10 @@
     font-size: 16px;
     line-height: 20px;
     font-family: 'Suisse Bold', sans-serif;
+    @include media-breakpoint-down(md) {
+        font-size: 15px;
+        line-height: 19px;
+    }
 }
 
 //Posts & Archive
@@ -98,6 +102,14 @@
     font-size: 48px;
     line-height: 50px;
     font-family: 'Lynon Bold', sans-serif;
+    @include media-breakpoint-down(md) {
+        font-size: 38px;
+        line-height: 40px;
+    }
+    @include media-breakpoint-down(md) {
+        font-size: 32px;
+        line-height: 36px;
+    }
 }
 
 @mixin smaller-title {
@@ -110,6 +122,10 @@
     font-size: 28px;
     line-height: 36px;
     font-family: 'Suisse Reg', sans-serif;
+    @include media-breakpoint-down(sm) {
+        font-size: 18px;
+        line-height: 24px;
+    }
 }
 
 
@@ -117,6 +133,10 @@
     font-size: 28px;
     line-height: 36px;
     font-family: 'Suisse Bold', sans-serif;
+    @include media-breakpoint-down(sm) {
+        font-size: 20px;
+        line-height: 20px;
+    }
 }
 
 @mixin post-aside-font {
@@ -164,8 +184,7 @@
     @include media-breakpoint-down(md) {
         font-size: 80px;
         line-height: 90px;
-        display: inline;
-    }
+    } 
 }
 
 @mixin archive-title-font {
@@ -184,12 +203,20 @@
     font-size: 44px;
     line-height: 50px;
     font-family: 'Lynon Bold', sans-serif;
+    @include media-breakpoint-down(md) {
+        font-size: 26px;
+        line-height: 32px;
+    }
 }
 
 @mixin home-archive-subhading-font {
     font-size: 44px;
     line-height: 50px;
     font-family: 'Lynon Reg', sans-serif;
+    @include media-breakpoint-down(md) {
+        font-size: 26px;
+        line-height: 32px;
+    }
 }
 
 @mixin alm-btn-font {
@@ -214,4 +241,9 @@
     color: $white;
     border-bottom: 2px dotted $white;
     width: 100%;
+    @include media-breakpoint-down(md) {
+        font-size: 36px;
+        line-height: 36px;
+        padding-bottom: 20px;
+    }
 }
