--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -16,7 +16,9 @@
 @import "theme/global";
 @import "theme/mixins";
 @import "theme/header";
+@import "theme/header-mobile";
 @import "theme/drawer";
+@import "theme/drawer-mobile";
 @import "theme/post-styles/post-headings";
 @import "theme/post-styles/intro-block";
 @import "theme/post-styles/regular-content";
