--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
@@ -30,6 +30,9 @@
         border-radius: 4px;
         display: inline-block;
     }
+    @include media-breakpoint-down(md) {
+        padding: 40px 0;
+    }
 }
 
 
@@ -53,6 +56,9 @@
             line-height: 20px;
             font-family: 'Suisse Reg', sans-serif;
             color: $white;
+            @include media-breakpoint-down(md) {
+                margin-bottom: 16px;
+            }
             a {
                 font-size: 16px;
                 line-height: 20px;
