--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -49,6 +49,9 @@
         @include post-body-subheading;
         margin-bottom: 15px;
     }
+    @include media-breakpoint-down(sm) {
+        margin: 25px 0;
+    }
 }
 
 .editors-picks-flex {
@@ -71,10 +74,27 @@
             h3 {
                 @include archive-title-font;
                 margin-bottom: 0;
+                font-size: 26px;
+                line-height: 32px;
+                font-family: 'Lynon Reg', sans-serif;
             }
         }
     }
+    @include media-breakpoint-down(sm) {
+        border-bottom: none;
+        display: block;
+        float: left;
+        width: 100%;
+        .pick {
+            width: 100%;
+            float: left;
+            border-bottom: 1.5px solid #D9D9D9;
+            padding-bottom: 18px;
+            margin-bottom: 18px;
+        }
+    }
 }
+
 
 .featured-cat-heading {
     @include archive-term-font;
@@ -87,6 +107,16 @@
     margin-bottom: 75px;
     position: relative;
     left: 0;
+    @include media-breakpoint-down(sm) { 
+        font-size: 51px;
+        line-height: 49px;
+        letter-spacing: -2px;
+        margin-bottom: 40px;
+        background-position: 0 45px;
+        background-size: 100% 23px;
+        padding-bottom: 0px;
+        display: inline;
+    }
     a.see-all {
         @include author-font;
         line-height: 20px;
@@ -107,6 +137,9 @@
         width: 64px;
         height: 64px;
         display: block;
+        @include media-breakpoint-down(sm) {
+            display: none;
+        }
         img {
             position: absolute;
             width: 100%;
@@ -124,8 +157,15 @@
         background-image: linear-gradient(180deg, $orange, $orange);
     }
 }
-
-
+@include media-breakpoint-down(sm) {
+    a.see-all-mobile {
+        position: relative;
+        width: 100px;
+    }
+    .featured-cat-heading-mobile-wrap {
+        margin-bottom: 45px;
+    }
+}
 
 
 @media (min-width: 1400px) {
@@ -147,5 +187,15 @@
     }
     .home .left-border {
         border-left: none;
+    }
+    .no-mob-img {
+        display: none !important;
+    }
+    .category-featured {
+        .single-archive-post-wrap {
+            padding-bottom: 25px;
+            margin-bottom: 25px;
+            border-bottom: 1.5px solid #D9D9D9;
+        }
     }
 }
