--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_intro-block.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_intro-block.scss
@@ -45,3 +45,11 @@
         }
     }
 }
+
+@include media-breakpoint-down(sm) {
+    .social-share-icons  {
+        #left-sidebar {
+            padding-left: 0;
+        }
+    }
+}
