--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
@@ -19,9 +19,18 @@
 }
 
 .vertical-black {
+    background: #000;
+    @include media-breakpoint-down(sm) {
+        padding: 35px 15px 0;
+    }
     .post-header-info-wrap {
         .primary-category {
             border-bottom: 1px solid $white;
+        }
+    }
+    @include media-breakpoint-down(sm) {
+        .author-meta {
+            margin-bottom: 35px;      
         }
     }
 }
@@ -49,7 +58,7 @@ figcaption {
 figcaption {
     left: 40px;
     @include media-breakpoint-down(sm) {
-        left: 0;
+        width: 90%;
     }
 }
 
@@ -71,6 +80,9 @@ figcaption {
         flex-direction: column;
         justify-content: center;
         padding: 0 75px;
+        @include media-breakpoint-down(sm) {
+            padding: 0 25px;
+        }
     }
     img {
         height: 100%;
