--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
@@ -11,6 +11,10 @@
     height: 100vh;
 }
 
+#drawerClose {
+    margin: 0 0 !important; 
+}
+
 input.search-submit{
     background-image: url('../img/search-submit.png');
     background-repeat: no-repeat;
